# studious-pancake

./: .dockerignore  .env.example  .flake8  .gitignore  .gitleaks.toml  .pr03-main-tree-trigger  .pr03_hardening.patch  .pr03_payload.b64  .pr03_payload.part00  .pr03_payload.part01  .pr03_payload.part02  .pr03_payload.part03  .pr03_payload.part04  .pre-commit-config.yaml  AI_TRADING_SYSTEM.md  Anchor.toml  Cargo.toml  Dockerfile  KNOWLEDGE_BASE.md  Makefile  PR-024_IMPLEMENTATION_SUMMARY.md  PR194_PACKAGE_SMOKE_DIAGNOSTIC.txt  PUMP_FUN_PREDICTOR.md  README.md  _apply_v5.py  ai_training_data.csv  ai_training_data.db  apply_fix_129.py  arb_bot.py  arb_bot.py.bak  bot  bot_health.json  ecosystem.config.js  emergency_recover.py  flashloan_release_evidence.py  helius-sanctum-lst-webhook.json  jupiter_client.py  litellm_config.example.yaml  litellm_config.yaml  mac_bridge.py  (+33 more)
.github/: CI_FIX_TASK.md
.pr02-bootstrap/: chunk_00  chunk_01  chunk_02  chunk_03
.pr206/: mypy-fix.patch  patch.part.00  patch.part.01  patch.part.02  patch.part.03
config/: capabilities.json  chain_registry.json  format_targets.txt  ingress_contract.json  kamino_supported_combinations.example.json  live_risk.yaml  product_contract_pr195.json  production_cutover_manifest.json  production_debt_pr149.json  quality_quarantine.json  requirements-lock.json  runtime.yaml  runtime_authority_map.json  security_supply_chain_policy.json  typecheck_quarantine.json  typecheck_targets.txt
docs/: b1_provider_protocol_conformance.md  b2_helius_delivery_plane.md  external_contracts.yaml  mega_pr01_canonical_paper_platform.md  mega_pr01_canonical_runtime_paper_core.md  mega_pr01_runtime_durability_repair_gate.md  mega_pr01_v4_multiprocess_runtime_gate.md  mega_pr01_v6_runtime_data_plane_repair.md  mega_pr02_economic_proof_qualification.md  mega_pr02_v5_finalized_message_evidence.md  mega_pr03_cp2_isolated_signer_submission_gate.md  mega_pr03_live_authorization_boundary.md  mega_pr03_live_canary_convergence.md  mega_pr03_v3_signer_cryptographic_evidence.md  mega_pr_02_production_paper_qualification.md  mega_pr_a1_paper_vertical_preflight.md  mega_pr_a2_exact_attempt_runtime.md  mega_pr_a2_supported_paper_runtime.md  mega_pr_a3_installed_durable_paper_service.md  mega_pr_a_canonical_paper_vertical.md  mega_pr_b2_provider_conformance.md  mega_pr_b3_active_providers_rooted_recovery.md  mega_pr_c_submission_finalized_settlement.md  mega_pr_d2_real_soak_release_artifacts.md  mega_pr_o1_management_release_evidence.md  mpr01_canonical_runtime_cutover.md  mpr01_installed_artifact_parity.md  mpr02_provider_protocol_data_plane_gate.md  mpr02_unified_durable_authority_gate.md  mpr02_v6_protocol_correctness_gate.md  mpr03_economics_persistence_ops_gate.md  mpr03_provider_data_plane_gate.md  mpr04_isolated_signer_jito_canary_boundary.md  mpr04_protocol_bound_economic_execution.md  mpr05_installed_paper_shadow_qualification.md  mpr07_operations_promotion_gate.md  mpr08_completion_release_truth_gate.md  mpr09_live_deployment_policy_gate.md  mpr10_lifecycle_queue_observability_gate.md  mpr11_routing_quota_transport_gate.md  (+202 more)
isolated_signer_service/: __init__.py  boundary.py  pyproject.toml
isolated_signer_service/src/flashloan_isolated_signer/: __init__.py  boundary.py  models.py  pr199.py  pr199_followup.py  service.py  store.py
programs/flash-loan/: Cargo.toml
programs/flash-loan/src/: core_logic.rs  lib.rs  lib.rs.idl  liquidation_arbitrage.rs  lst_arbitrage.rs  orderbook_arbitrage.rs  sniping_arbitrage.rs
scripts/: apply_pr190_patch.py  backtest_replay.py  build_contract.sh  clean_markers.py  clean_state.py  d2_release_soak_bundle.py  decision_cli.py  emergency_recover.py  generate_discriminator.sh  generate_super_mpr_b_shadow_soak.py  hermetic_runtime.py  image_smoke.sh  import_smoke.py  lock_requirements.py  manage_webhooks.py  materialize_mpr_close_04_evidence.py  package_boundary.py  package_smoke.py  paper_trader.py  (+54 more)
(+1233 files in other folders)
