[workspace]
members = ["programs/flash-loan"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18"
solana-sdk = "1.18"
marginfi = { git = "https://github.com/mrgnlabs/marginfi-v2", features = ["cpi"] }

[profile.release]
overflow-checks = true
opt-level = "s"
lto = true
codegen-units = 1
